--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: qwop369258@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
     Bolun's personal blog
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://bolun.info" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
 github_username:  boluny
 
